add header with background image and logo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-css-booleaner</title>
+    <!-- style sheet -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- header with logo -->
+    <header>
+        <div class="logo-container"><img id="logo-file" src="./images/logo.svg" alt=""></div>
+    </header>
 </body>
 </html>
