add title and author section, add images section

--- a/index.html
+++ b/index.html
@@ -13,5 +13,25 @@
     <header>
         <div class="logo-container"><img id="logo-file" src="./images/logo.svg" alt=""></div>
     </header>
-</body>
+
+    <div class="container">
+
+        <!-- title, author and date of the article -->
+        <div class="title">
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <span>Scritto da <a href="https://boolean.careers/">The Booleaner</a></span>
+            <span>il 10/10/2020</span>
+        </div>
+
+        <!-- images of Tim Berners-Lee and captions -->
+        <figure>
+            <img src="./images/tim-1.jpg" alt="Tim Berners-Lee_picture_1">
+            <img src="./images/tim-2.jpg" alt="Tim Berners-Lee_picture_2">
+            <figcaption>
+                <p>Ist Photo. John s. and James L. anight roundation. by scott Henrichser<br>2nd Photo: Wikimedia, by Paul Clarke</p>
+            </figcaption>
+        </figure>
+    
+    </div>
+    
 </html>
