add ul, paragraphs and suggestions; start table

--- a/index.html
+++ b/index.html
@@ -31,6 +31,49 @@
                 <p>Ist Photo. John s. and James L. anight roundation. by scott Henrichser<br>2nd Photo: Wikimedia, by Paul Clarke</p>
             </figcaption>
         </figure>
+
+        <!-- paragraph 1 -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius porro facilis quod aliquam dolor impedit quasi minus amet, esse exercitationem excepturi corporis repellendus velit? Quam provident debitis, impedit magni facilis recusandae explicabo fugit accusamus. Voluptatem et ea porro. Earum assumenda quod voluptatem praesentium explicabo quae blanditiis. Obcaecati, reprehenderit in esse ipsam amet magni optio voluptate ad culpa explicabo doloribus, nostrum fuga. Cum itaque, quam culpa quibusdam numquam possimus temporibus ipsa, harum aperiam rem autem incidunt dolores sint perferendis molestiae.</p>
+
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam veniam nesciunt soluta unde quae.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui rem debitis et.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur iusto facere mollitia aperiam id maxime.</li>
+        </ul>
+
+       <!-- table -->
+        <table>
+            <tr>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo hic quibusdam soluta magnam beatae quos similique, nesciunt laudantium, cupiditate vero excepturi voluptates aut voluptatibus unde?</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, ipsum veniam nihil, totam enim autem cupiditate dignissimos rem officia vitae, fuga eum quos molestiae voluptatem?</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempora nemo totam sit, quaerat sed maxime exercitationem, alias eligendi nulla praesentium nesciunt, modi necessitatibus sunt.</td>
+            </tr>
+        </table>
+
+        <!-- paragraph 2 -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius porro facilis quod aliquam dolor impedit quasi minus amet, esse exercitationem excepturi corporis repellendus velit? Quam provident debitis, impedit magni facilis recusandae explicabo fugit accusamus. Voluptatem et ea porro. Earum assumenda quod voluptatem praesentium explicabo quae blanditiis. Obcaecati, reprehenderit in esse ipsam amet magni optio voluptate ad culpa explicabo doloribus, nostrum fuga. Cum itaque, quam culpa quibusdam numquam possimus temporibus ipsa, harum aperiam rem autem incidunt dolores sint perferendis molestiae.</p>
+
+        <!-- suggestions -->
+        <div>
+            <h3>Potrebbero interessarti</h3>
+            <img src="./images/monitor.jpg" alt="monitor_image"> <br>
+            <img src="./images/graph.jpg" alt="graph_image">
+        </div>
     
     </div>
     
