fix ul padding; grey color  for text under title

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!-- title, author and date of the article -->
         <div class="title">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <span>Scritto da <a href="https://boolean.careers/">The Booleaner</a></span>
-            <span>il 10/10/2020</span>
+            <span class="grey">Scritto da <a href="https://boolean.careers/">The Booleaner</a></span>
+            <div class="grey">il 10/10/2020</div>
         </div>
 
         <!-- images of Tim Berners-Lee and captions -->
@@ -48,7 +48,7 @@
                 <th>Lorem ipsum dolor</th>
                 <th>Lorem ipsum dolor</th>
             </tr>
-            <tr>
+            <tr class="cell-lightblue">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo hic quibusdam soluta magnam beatae quos similique, nesciunt laudantium, cupiditate vero excepturi voluptates aut voluptatibus unde?</td>
@@ -58,7 +58,7 @@
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, ipsum veniam nihil, totam enim autem cupiditate dignissimos rem officia vitae, fuga eum quos molestiae voluptatem?</td>
             </tr>
-            <tr>
+            <tr class="cell-lightblue">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit tempora nemo totam sit, quaerat sed maxime exercitationem, alias eligendi nulla praesentium nesciunt, modi necessitatibus sunt.</td>
@@ -71,8 +71,15 @@
         <!-- suggestions -->
         <div>
             <h3>Potrebbero interessarti</h3>
-            <img src="./images/monitor.jpg" alt="monitor_image"> <br>
-            <img src="./images/graph.jpg" alt="graph_image">
+            <div class="suggestion_1">
+                <img src="./images/monitor.jpg" alt="monitor_image"> <br>
+                <span class="lorem">Lorem ipsum dolor</span>
+            </div>
+
+            <div class="suggestion_2">
+                <img src="./images/graph.jpg" alt="graph_image">
+                <span class="lorem">Lorem ipsum dolor</span>
+            </div>
         </div>
     
     </div>
