fix table cells sizes

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
        <!-- table -->
         <table>
             <tr>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor</th>
+                <th class="left">Lorem ipsum dolor</th>
+                <th class="center">Lorem ipsum dolor</th>
+                <th class="right">Lorem ipsum dolor</th>
             </tr>
             <tr class="cell-lightblue">
                 <td>Lorem ipsum dolor</td>
