highlight some text in the p tags

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </figure>
 
         <!-- paragraph 1 -->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius porro facilis quod aliquam dolor impedit quasi minus amet, esse exercitationem excepturi corporis repellendus velit? Quam provident debitis, impedit magni facilis recusandae explicabo fugit accusamus. Voluptatem et ea porro. Earum assumenda quod voluptatem praesentium explicabo quae blanditiis. Obcaecati, reprehenderit in esse ipsam amet magni optio voluptate ad culpa explicabo doloribus, nostrum fuga. Cum itaque, quam culpa quibusdam numquam possimus temporibus ipsa, harum aperiam rem autem incidunt dolores sint perferendis molestiae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius porro facilis quod aliquam dolor <mark>impedit quasi minus amet, esse exercitationem excepturi corporis repellendus velit?</mark> Quam provident debitis, impedit magni facilis recusandae explicabo fugit accusamus. Voluptatem et ea porro. Earum assumenda quod voluptatem praesentium explicabo quae blanditiis. Obcaecati, reprehenderit in esse ipsam amet magni optio voluptate ad culpa explicabo doloribus, nostrum fuga. Cum itaque, quam culpa quibusdam numquam possimus temporibus ipsa, harum aperiam rem autem incidunt dolores sint perferendis molestiae.</p>
 
         <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam veniam nesciunt soluta unde quae.</li>
@@ -66,7 +66,7 @@
         </table>
 
         <!-- paragraph 2 -->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius porro facilis quod aliquam dolor impedit quasi minus amet, esse exercitationem excepturi corporis repellendus velit? Quam provident debitis, impedit magni facilis recusandae explicabo fugit accusamus. Voluptatem et ea porro. Earum assumenda quod voluptatem praesentium explicabo quae blanditiis. Obcaecati, reprehenderit in esse ipsam amet magni optio voluptate ad culpa explicabo doloribus, nostrum fuga. Cum itaque, quam culpa quibusdam numquam possimus temporibus ipsa, harum aperiam rem autem incidunt dolores sint perferendis molestiae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius porro facilis quod aliquam dolor impedit quasi minus amet, esse exercitationem excepturi corporis repellendus velit? Quam provident debitis, impedit magni facilis recusandae explicabo fugit accusamus. <mark>Voluptatem et ea porro. Earum assumenda quod voluptatem praesentium</mark> explicabo quae blanditiis. Obcaecati, reprehenderit in esse ipsam amet magni optio voluptate ad culpa explicabo doloribus, nostrum fuga. Cum itaque, quam culpa quibusdam numquam possimus temporibus ipsa, harum aperiam rem autem incidunt dolores sint perferendis molestiae.</p>
 
         <!-- suggestions -->
         <div>
