fix header background, delete a redundant class

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header with logo -->
     <header>
-        <div class="logo-container"><img id="logo-file" src="./images/logo.svg" alt=""></div>
+        <div class="container"><img id="logo-file" src="./images/logo.svg" alt=""></div>
     </header>
 
     <div class="container">
